test_regress/t/t_config_unsup.out
%Error-UNSUPPORTED: t/t_config_unsup.v:28:3: Unsupported: config rule
   28 |   default liblist;   
      |   ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_config_unsup.v:29:3: Unsupported: config rule
   29 |   default liblist liba libb;
      |   ^~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:32:3: Unsupported: config rule
   32 |   instance t.m20 liblist;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:33:3: Unsupported: config rule
   33 |   instance t.m21 liblist libc;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:34:3: Unsupported: config rule
   34 |   instance t.m22 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:35:3: Unsupported: config rule
   35 |   instance t.m23 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:36:3: Unsupported: config rule
   36 |   instance t.m24 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:39:3: Unsupported: config rule
   39 |   instance t.m30 use cell_identifier;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:39:18: Unsupported: config use
   39 |   instance t.m30 use cell_identifier;
      |                  ^~~
%Error-UNSUPPORTED: t/t_config_unsup.v:40:3: Unsupported: config rule
   40 |   instance t.m31 use lib_id.cell_id;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:40:18: Unsupported: config use
   40 |   instance t.m31 use lib_id.cell_id;
      |                  ^~~
%Error-UNSUPPORTED: t/t_config_unsup.v:41:3: Unsupported: config rule
   41 |   instance t.m32 use #();
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:41:18: Unsupported: config use
   41 |   instance t.m32 use #();
      |                  ^~~
%Error-UNSUPPORTED: t/t_config_unsup.v:44:3: Unsupported: config rule
   44 |   cell m40 liblist libc libd;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:44:8: Unsupported: config cell
   44 |   cell m40 liblist libc libd;
      |        ^~~
%Error-UNSUPPORTED: t/t_config_unsup.v:45:3: Unsupported: config rule
   45 |   cell work.m41 liblist libc libd;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:45:8: Unsupported: config cell
   45 |   cell work.m41 liblist libc libd;
      |        ^~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:46:3: Unsupported: config rule
   46 |   cell m42 use m42alt;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:46:8: Unsupported: config cell
   46 |   cell m42 use m42alt;
      |        ^~~
%Error-UNSUPPORTED: t/t_config_unsup.v:46:12: Unsupported: config use
   46 |   cell m42 use m42alt;
      |            ^~~
%Error-UNSUPPORTED: t/t_config_unsup.v:47:3: Unsupported: config rule
   47 |   cell work.m43 use work.m43alt;
      |   ^~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:47:8: Unsupported: config cell
   47 |   cell work.m43 use work.m43alt;
      |        ^~~~
%Error-UNSUPPORTED: t/t_config_unsup.v:47:17: Unsupported: config use
   47 |   cell work.m43 use work.m43alt;
      |                 ^~~
%Error: Exiting due to
